// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{itineraries || pricingData.itineraries 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminUploadsSuccess
      closeDialog={[Function]}
      data={Object {}}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <Switch
      className="flex"
    >
      <Route
        exact={true}
        path="/admin/pricings"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/trucking/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/routes/:id"
        render={[Function]}
      />
    </Switch>
  </div>
</GenericError>
`;

exports[`document.viewer is falsy 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <Switch
      className="flex"
    >
      <Route
        exact={true}
        path="/admin/pricings"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/trucking/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/routes/:id"
        render={[Function]}
      />
    </Switch>
  </div>
</GenericError>
`;

exports[`shallow render 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminUploadsSuccess
      closeDialog={[Function]}
      data={Object {}}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <Switch
      className="flex"
    >
      <Route
        exact={true}
        path="/admin/pricings"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/trucking/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/routes/:id"
        render={[Function]}
      />
    </Switch>
  </div>
</GenericError>
`;

exports[`state.selectedPricing is true 1`] = `
<GenericError
  t={[Function]}
  theme={
    Object {
      "colors": Object {
        "primary": "#333",
        "secondary": "#fafafa",
      },
    }
  }
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <AdminUploadsSuccess
      closeDialog={[Function]}
      data={Object {}}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
    <div
      className="flex-none layout-row"
    >
      <RoundButton
        active={false}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={[Function]}
        icon=""
        iconClass="fa-chevron-left"
        inverse={false}
        size="small"
        text="Back"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <Switch
      className="flex"
    >
      <Route
        exact={true}
        path="/admin/pricings"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/clients/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/trucking/:id"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/admin/pricings/routes/:id"
        render={[Function]}
      />
    </Switch>
  </div>
</GenericError>
`;
